@@ -1,9 +1,9 @@
 APACHE 1.3 STATUS:						-*-text-*-
-  Last modified at [$Date: 2001/09/11 03:29:10 $]
+  Last modified at [$Date: 2001/09/12 15:16:41 $]
 
 Release:
 
-   1.3.21: In development
+   1.3.21: In development - Bill Stoddard has proposed a T&R "soon"
    1.3.20: Tagged and rolled May 15, 2001. Announced May 21, 2001.
    1.3.19: Tagged and rolled Feb 26, 2001. Announced Mar 01, 2001.
    1.3.18: Not released.
