@@ -218,6 +218,15 @@ static const char *add_env_module_vars_unset(cmd_parms *cmd,
     sconf->unsetenv = sconf->unsetenv ?
         ap_pstrcat(cmd->pool, sconf->unsetenv, " ", arg, NULL) :
          arg;
+
+    if (sconf->vars_present && !cmd->path) {
+        /* if {Set,Pass}Env FOO, UnsetEnv FOO
+         * are in the base config, merge never happens,
+         * unset never happens, so just unset now
+         */
+        ap_table_unset(sconf->vars, arg);
+    }
+
     return NULL;
 }
 
